# geradeaus-license-manager-cli

./: LICENSE.txt  README.md  pyproject.toml
src/geradeaus_license_manager_cli/: main.py
